# Umamusume-CM-Data-Pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  readme.md  requirements.txt
data/raw/: cm10_finals.csv  cm11_finals.csv  cm6_finals.csv  cm7_finals.csv  cm8_finals.csv  cm9_finals.csv
dbt_uma/: dbt_project.yml  profiles.yml
dbt_uma/macros/: clean_typo.sql
dbt_uma/models/1_bronze/: sources.yml
dbt_uma/models/2_silver/: int_all_cm_unified.sql
dbt_uma/models/2_silver/cm10/: int_cm10_unified.sql  stg_cm10_day_1.sql  stg_cm10_day_2.sql  stg_cm10_day_3.sql  stg_cm10_day_4.sql  stg_cm10_day_5.sql
dbt_uma/models/2_silver/cm11/: int_cm11_unified.sql  stg_cm11_day_1.sql  stg_cm11_day_2.sql  stg_cm11_day_3.sql  stg_cm11_day_4.sql  stg_cm11_day_5.sql
dbt_uma/models/2_silver/cm6/: int_cm6.sql
dbt_uma/models/2_silver/cm7/: int_cm7_unified.sql  stg_cm7_day_1.sql  stg_cm7_day_2.sql  stg_cm7_day_3.sql  stg_cm7_day_4.sql  stg_cm7_day_5.sql
dbt_uma/models/2_silver/cm8/: int_cm8_unified.sql  stg_cm8_day_1.sql  stg_cm8_day_2.sql  stg_cm8_day_3.sql  stg_cm8_day_4.sql  stg_cm8_day_5.sql
dbt_uma/models/2_silver/cm9/: int_cm9_unified.sql  stg_cm9_day_1.sql  stg_cm9_day_2.sql  stg_cm9_day_3.sql  (+2 more)
dbt_uma/models/3_gold/: dim_player_data.sql  dim_uma_name.sql  fact_player_cards.sql  fact_player_stats.sql  fact_race_results.sql
dbt_uma/seeds/: dim_cards.csv  dim_race_track.csv  dim_style.csv  dim_uma_role.csv  map_cards.csv
src/cleaners/: clean_cm.py  cleaning_orchestrator.py
src/utils/: global_cleaning_operations.py  ingestion.py
