[project]
name = "umamusume-cm-etl-and-analysis"
description = "E2E Pipeline and Analysis based on Survey Response data collected by MooMooCow discord on CM results"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "huggingface_hub==1.12.0",
    "polars==1.40.1",
    "protobuf>=6.0,<7.0",
    "python-dotenv==1.2.2",
    "torch>=2.11.0",
    "transformers==5.6.2",
    "scikit-learn",
    "google-cloud-bigquery",
    "dbt-core==1.11.8",
    "dbt-bigquery"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
